--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.13.0",
+    "sass": "^1.87.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.1.0",
     "vite": "^2.4.2",
